tests/baselines/reference/namespaceModule.errors.txt
tests/cases/compiler/namespaceModule.ts(3,1): error TS2708: Cannot use namespace 'z' as a value here because it has no value export.
tests/cases/compiler/namespaceModule.ts(9,1): error TS2708: Cannot use namespace 'x' as a value here because it has no value export.


==== tests/cases/compiler/namespaceModule.ts (2 errors) ====
    namespace z {}
    
    z;
    ~
!!! error TS2708: Cannot use namespace 'z' as a value here because it has no value export.
    
    namespace x {
        export type z = string;
    }
    
    x;
    ~
!!! error TS2708: Cannot use namespace 'x' as a value here because it has no value export.
    